--- a/projects/SoyNAM/index.html
+++ b/projects/SoyNAM/index.html
@@ -32,25 +32,25 @@ sitemap: projects/SoyNAM
       <tr>
         {% assign drought_display = nam_cat.drought | replace: '_', ' ' %}
         {% if nam_cat.yield != "~" %}
-          <td><a href="{{ "/projects/SoyNam/" | relative_url }}{{ nam_cat.yield }}">{{ nam_cat.yield }}</a></td>
+          <td><a href="{{ "/projects/SoyNAM/" | relative_url }}{{ nam_cat.yield }}">{{ nam_cat.yield }}</a></td>
         {% else %}
           <td>~</td>
         {% endif %}
 
         {% if nam_cat.diverse != "~" %}
-          <td><a href="{{ "/projects/SoyNam/" | relative_url }}{{ nam_cat.diverse }}">{{ nam_cat.diverse }}</a></td>
+          <td><a href="{{ "/projects/SoyNAM/" | relative_url }}{{ nam_cat.diverse }}">{{ nam_cat.diverse }}</a></td>
         {% else %}
           <td>~</td>
         {% endif %}
 
         {% if nam_cat.drought != "~" %}
-          <td><a href="{{ "/projects/SoyNam/" | relative_url }}{{ nam_cat.drought }}">{{ drought_display }}</a></td>
+          <td><a href="{{ "/projects/SoyNAM/" | relative_url }}{{ nam_cat.drought }}">{{ drought_display }}</a></td>
         {% else %}
           <td>~</td>
         {% endif %}
 
         {% if nam_cat.hub != "~" %}
-          <td><a href="{{ "/projects/SoyNam/" | relative_url }}{{ nam_cat.hub }}">{{ nam_cat.hub }}</a></td>
+          <td><a href="{{ "/projects/SoyNAM/" | relative_url }}{{ nam_cat.hub }}">{{ nam_cat.hub }}</a></td>
         {% else %}
           <td>~</td>
         {% endif %}
