Tweak note text

--- a/projects/SoyNAM/index.html
+++ b/projects/SoyNAM/index.html
@@ -59,7 +59,8 @@ sitemap: projects/SoyNAM
   </tbody>
 </table>
 
-<p class="uk-text-small">Note that line PI 507681B is not shown. Analysis of the progeny of SoyNAM population 46 (PI 507681B x IA3023) showed that the cross was not as described. No phenotypic data for SoyNAM 46 are available.
+<p class="uk-text-small">Note that line PI 507681B is not shown. Analysis of the progeny of SoyNAM population 46 (PI 507681B x IA3023) <br>
+showed that the cross was not as described. No phenotypic data for SoyNAM 46 are available.
 </p>
 
 {% comment %}
