--- a/about/soybase_team/index.html
+++ b/about/soybase_team/index.html
@@ -29,17 +29,20 @@ Team:
     status: current
     # current student employee
   - name: Kimberly Raymer
-    role: Student Developer
+    role: Student Programmer
     status: student
   - name: Simon Novak
-    role: Student Developer
+    role: Student Programmer
     status: student
   - name: Chee Hau Fong
-    role: Student Developer
+    role: Student Programmer
+    status: student
+  - name: Brandon Jordan
+    role: Postdoctoral Researcher
     status: student
     # past employee
   - name: David Grant
-    role: Data Curation
+    role: SoyBase Curator Emeritus
     status: Alumni
   - name: Robert Baker
     role: Data Curation
@@ -48,10 +51,10 @@ Team:
     role: Data Curation
     status: Alumni
   - name: Anne Brown
-    role: Postdoctoral Scholar
+    role: Postdoctoral Researcher
     status: Alumni
-  - name: Shawn Conners
-    role: Programmer
+  - name: Shawn Conner
+    role: Programmer, Web Development
     status: Alumni
   - name: Kevin Feeley
     role: Programmer, Web Development
@@ -81,6 +84,15 @@ Team:
   - name: Daniel Tarte
     role: Student Employee
     status: Alumni
+  - name: Andrew Denne
+    role: Student Programmer
+    status: Alumni
+  - name: Andrew Wilkey
+    role: Student Programmer
+    status: Alumni  
+  - name: Aditya Kumar
+    role: Student Programmer
+    status: Alumni  
 
 
 ---
@@ -94,7 +106,7 @@ Team:
     {% for member in current_team  %}
     <tr>
       <th colspan="3" style="text-align:left;color:#fff;background-color:#060;">
-        <span style="font-size:14pt;">{{ member.name }}</span>&nbsp;‐&nbsp;{{ member.role }}
+        <span style="font-size:14pt;">{{ member.name }}</span>
       </th>
     </tr>
     <tr>
@@ -116,7 +128,7 @@ Team:
   </tbody>
 </table>
 
-<h1>Current Student Employee</h1>
+<h1>Students and Postdocs</h1>
 <table id="currentStudent" style="width: 100%; padding: 1em">
   <tbody>
     {% assign student_team = page.Team | where: "status", "student" %}
