Remove individual amigo iframe directory instances, replacing these with an iframe_pathname_suffix parameter each time ontology/amigo.html is called.

--- a/tools/ontology/index.html
+++ b/tools/ontology/index.html
@@ -30,7 +30,7 @@ tools_menu: true
 <!-- ################# -->
 <hr>
 <p>
-  <a href="/tools/ontology/plant/amigo.html">
+  <a href="/tools/ontology/amigo.html?iframe_pathname_suffix=/term/SOY:0000097">
     <strong>Browse and Search Soybean <u>Whole Plant Growth Terms</u></strong>
   </a>
 </p>
@@ -55,8 +55,8 @@ tools_menu: true
 <!-- ################# -->
 <hr>
 <p>
-<a href="/tools/ontology/structure/amigo.html">
-  <strong>Browse and Search Soybean <u>Structure Terms</u></strong>
+<a href="/tools/ontology/amigo.html?iframe_pathname_suffix=/term/SOY:0000098">
+  <strong>Browse and Search <u>Soybean Structure Terms</u></a></strong>
 </a>
 <br>
 <details>
@@ -72,7 +72,7 @@ tools_menu: true
 <!-- ################# -->
 <hr>
 <p>
-<a href="/tools/ontology/development/amigo.html">
+<a href="/tools/ontology/amigo.html?iframe_pathname_suffix=/term/SOY:0001650">
   <strong>Browse and Search <u>Developmental Terms</u></strong>
 </a>
 </p>
@@ -84,7 +84,7 @@ tools_menu: true
 <!-- ################# -->
 <hr>
 <p>
-<a href="/tools/ontology/trait/amigo.html">
+<a href="/tools/ontology/amigo.html?iframe_pathname_suffix=/term/SOY:0000099">
   <strong>Browse and Search Soybean <u>Trait Terms</u></strong>
 </a>
 </p>
