--- a/about/fairpractices/index.html
+++ b/about/fairpractices/index.html
@@ -59,10 +59,10 @@ If you make your data FAIR, it will be more visible, easier to reuse, and more f
 		
 	<li><b>Do not rename genes that already have names</b></li>
 		<ul>
-			<li>Once upon a time, the name of a soybean gene was its unique, persistent identifier. But now, renaming of genes that already have names is a big problem. Many names for the same genes make it difficult to find all information for that gene. Even worse, when the same name is used for different genes, how can a human, much less a computer know they are different genes? Please look up your gene at SoyBase before assigning a name, and follow the SoyBase nomenclature guidelines. (NEED TO FIND LINK)</li>
+			<li>Once upon a time, the name of a soybean gene was its unique, persistent identifier. But now, renaming of genes that already have names is a big problem. Many names for the same genes make it difficult to find all information for that gene. Even worse, when the same name is used for different genes, how can a human, much less a computer know they are different genes? Please look up your gene at SoyBase before assigning a name, and follow the <a href="/about/" target="_blank">SoyBase nomenclature guidelines.</a></li>
 		</ul>
 
-	<li><b>Let SoyBase know about your work!</b></li>
+	<li><a href="/about/" target="_blank"><b>Let SoyBase know about your work!</b></a></li>
 		<ul>
 			<li>Please let us know about your publications, and provide links to your data. If you have published on a gene or genes, or if you have a dataset that will be useful to others, let us know. Review the  pages on genes or other information that you study, and let us know if corrections should be made. We want to get it right!</li>
 		</ul>
