Add named anchor

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ tools_menu: false
   </dl>
 {% endfor %}
 
-
+<a name="contact" id="contact">
 <iframe
   width="640px"
   height="800px"
@@ -32,4 +32,4 @@ tools_menu: false
   allowfullscreen
   webkitallowfullscreen
   mozallowfullscreen
-  msallowfullscreen></iframe>
+  msallowfullscreen></iframe></a>
