Change headings in FAIR practices index from <h5> to <p><strong>

--- a/about/fairpractices/index.html
+++ b/about/fairpractices/index.html
@@ -6,7 +6,7 @@ tools_menu: false
 <p>“FAIR” is the acronym for <b>F</b>indable, <b>A</b>ccessible, <b>I</b>nteroperable and <b>R</b>eusable, and applies to scientific data used by people and computers. The FAIR data principles were established in 2016.  More information is available from the <a href="https://www.nature.com/articles/sdata201618" target="_blank">2016 publication</a>, the <a href="https://doi.org/10.1016/j.molp.2018.07.005" target="_blank">2018 editorial publication</a>, the <a href="https://force11.org/info/the-fair-data-principles/" target="_blank">FAIR website</a> and the <a href="https://www.go-fair.org/go-fair-initiative/" target="_blank">GO FAIR Initiative webpage</a>.</p>
 
 
-<p>The FAIR principles recognize that:</p>
+<p><strong>The FAIR principles recognize that:</strong></p>
 <ul>
 <li>published data should be stored where it can be found and identified accurately using globally unique persistent identifiers;</li>
 <li>data can be retrieved using standard protocols (like through a web interface);</li>
@@ -17,17 +17,17 @@ tools_menu: false
 <p>At SoyBase, we value data and believe that it is the responsibility of every soybean researcher and breeder to make their publicly-funded data FAIR. Here we outline some basic guidelines for good data management. We hope that our breeding and research community will lead the world wide charge to FAIR data! We are always happy to answer your questions on these issues.</p>
 
 
-<h5><b>Why is this important?</b></h5> 
+<p><strong>Why is this important?</strong></p> 
 <p>Published data continues to increase dramatically in volume and complexity. Data sets in individual publications are now routinely so large, that the aid of computer analysis is required. For data to be “machine readable” (that is, the data can be manipulated by a computer program), new standards are being established so that data is BOTH human and machine readable. Also, journal publishers often do not accept large data sets, so other data repositories must be used, and it can be difficult for submitters to find the right database for their data. It can also be difficult for researchers to find data associated with a publication that is not in the supplementary data, if persistent globally unique identifiers are not specified in the published article.</p>
 
 
-<h5><b>Why should YOUR Data be FAIR?</b></h5>  
+<p><strong>Why should YOUR Data be FAIR?</strong></p>  
 If you make your data FAIR, it will be more visible, easier to reuse, and more frequently cited. If others make their data FAIR, it will help the entire community harvest the vast depth and breath of soybean data, and discovery will proceed more quickly, especially as new analysis methods come online.
 
 
-<h4><b>What can <b>YOU</b> do to make your data FAIR?</b></h4>
+<p><strong>What can <i>YOU</i> do to make your data FAIR?</strong></p>
 
-<p>Start with these tasks:
+<p>Start with these tasks:</p>
 
 <ul> 
 	<li><b>Understand the FAIR data principles, and make your data FAIR</b></li>
