--- a/tools/parentage/index.html
+++ b/tools/parentage/index.html
@@ -44,9 +44,11 @@ Some Pioneer strains have names of the form P followed by two digits followed by
   <thead>
     <tr>
       <th style="text-align: center"><b>Individual</b></th>
-      <th style="text-align: center"><b>Parent1</b></th>
-      <th style="text-align: center"><b>Parent2</b></th>
+      <th style="text-align: center"><b>Female Parent</b></th>
+      <th style="text-align: center"><b>Male Parent</b></th>
       <th style="text-align: center"><b>Pedigree</b></th>
+      <th style="text-align: center"><b>Synonyms</b></th>
+      <th style="text-align: center"><b>Notes</b></th>
     </tr>
   </thead>
   <tbody>
@@ -56,6 +58,8 @@ Some Pioneer strains have names of the form P followed by two digits followed by
         <td>{{ item.Parent1 }}</td>
         <td>{{ item.Parent2 }}</td>
         <td>{{ item.Pedigree }}</td>
+        <td>{{ item.Synonyms}}</td>
+        <td>{{ item.Comment }}</td>
       </tr>
     {% endfor %}
   </tbody>
