Added links to parentage data and data submission template. Edited text for brevity.

--- a/tools/parentage/index.html
+++ b/tools/parentage/index.html
@@ -15,9 +15,8 @@ and
 regions as well as other sources such as USDA technical bulletins, variety registrations and PVP applications. 
 The strains that appear here were part of the uniform trials and not the preliminary trials. The pedigree of 
 individual strains was followed back to named strains in both maternal and paternal lineages where possible. 
-An unknown parent is indicated with "-". When available, synonyms for the strains were also collected. 
-The PVP registration number is noted when known. Because of the sources used, not all named soybean strains are listed. 
-If a strain was named and it is in Germplasm Resources Information Network (GRIN), the PI number is noted as a synonym. 
+An unknown parent is indicated with "-". When available, PVP registration numbers are noted, 
+as are synonyms for the strains - including the PI number for lines deposited at GRIN. 
 Check for additional information about PI lines at the <a href="https://npgsweb.ars-grin.gov/gringlobal/search"><b>GRIN search page</b></a>.
 </p>
 
@@ -35,8 +34,13 @@ can be read as: <u>CS31</u> is progeny of <u>S10</u> and <u>Mitchell</u>;
 and <u>Mitchell</u> is progeny of <u>Amsoy</u> and <u>Wayne</u>.
 </p>
 <p>
-The information below is also available for <a href=""><b>download</b></a> - for example, 
-if you wish to filter on pedigrees that contain an accession of interest.
+The information below is also available for 
+<a href="https://soybase.org/data/annex/Glycine/max/pedigrees/glyma.mixed.ped.2023-11-08.tsv.gz"><b>download</b>
+</a> - for example, 
+if you wish to filter on pedigrees that contain an accession of interest.<br>
+We welcome submissions by the community of new or updated pedigree information. 
+Please use this 
+<a href="https://soybase.org/data/annex/Glycine/max/pedigrees/SoyBaseParentageWorksheetV3.xls"><b>data submission spreadsheet</b></a>.
 </p>
 
 <p><b>Browse or search accessions beginning with ...</b><p>
