fixed broken link

--- a/community/sbw/SBW/SBW_2014.html
+++ b/community/sbw/SBW/SBW_2014.html
@@ -24,7 +24,7 @@ Seth Naeve (Public Agronomist/Physiologist), Univ. Minnesota, Co-Chair, Tuesday 
 <tr><td>2:50</td><td>3:20</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Yong-qiang_SBW2014.pdf'>Yong-qiang Charles An</a>,<br />USDA-ARS, St. Louis, MO</td><td>Exploring Soybean Transcript Polymorphisms to Identify Gene Variants and Functional Markers for Seed Quality Improvement</td></tr>
 <tr><td>3:20</td><td>3:50</td><td>Jianxin Ma, Purdue Univ.</td><td>Genetic Basis of Soybean Stem Growth Habit and its Potential Application for Development of High-yielding, Climate-resilient Soybean</td></tr>
 <tr><td>3:50</td><td>4:20</td><td>Mike Gore, Cornell Univ.</td><td>Genome-Wide Analysis of Metabolic Traits in Maize</td></tr>
-<tr><td>4:20</td><td>4:50</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Goldsmith_SBW2014.pdf>Peter Goldsmith, Univ. Illinois</a></td><td>Tropical Soybean Research: USAID's New Soybean Innovation Lab</td></tr>
+<tr><td>4:20</td><td>4:50</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Goldsmith_SBW2014.pdf'>Peter Goldsmith, Univ. Illinois</a></td><td>Tropical Soybean Research: USAID's New Soybean Innovation Lab</td></tr>
 <tr><td>4:50</td><td>5:20</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Becherer_SBW2014.pdf'>John Becherer, CEO,</a><br />United Soybean Board</td><td>Considerations in Capturing Soybean Component Value from the Soybean Value Chain</td></tr>
 <tr><td>5:20</td><td>&nbsp;</td><td>Katy Martin Rainey</td><td>Announcements and Adjourn</td></tr>
 </table>
