Updated Jobs page

--- a/community/jobs/index.html
+++ b/community/jobs/index.html
@@ -6,3 +6,4 @@ sitemap: community/Jobs
 
 
 <h2>Jobs</h2>
+<p> If you have soybean related jobs, please contact <a href= "/about/soybase_team/" target="_blank">SoyBase</a> to get posted. <p>
